[package]
name = "hyper_tls_repro"
version = "0.1.0"
edition = "2021"
exclude = ["tests/", "docs/", "examples/","sample_code/"]

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.5.1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23.19"
uuid = { version = "1.3", features = ["v4"] }
parking_lot = "0.12"
prometheus = "0.13.4"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.10.0" 


hyper-util = { version = "=0.1.10", features = ["http1", "tokio", "server"] }
http-body-util = "=0.1.2"
futures-util = "=0.3.31"
rand = "=0.8.5"
reqwest = { version = "=0.12.9" }
futures = "0.3"


tracing = "0.1.41"
tracing-subscriber = "0.3"
