[package]
name = "hyper_tls_repro"
version = "0.1.0"
edition = "2021"
exclude = ["tests/", "docs/", "examples/","sample_code/"]



[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
rustls-pemfile = "2.0"
rustls-pki-types = "1.0"
bytes = "1.0"
http-body-util = "0.1.2"


hyper-rustls = { version = "0.27.3", features = ["webpki-roots"] }
hyper-util = { version = "0.1.10", features = ["full"] }
rustls = "0.23.19"
tokio-rustls = "0.26.1"



